--- a/templates/article_template.html
+++ b/templates/article_template.html
@@ -6,6 +6,9 @@
 		<link rel="stylesheet" href="/css/main.css">
 	</head>
 	<body>
+		<div class="breadcrumbs_div">
+			{breadcrumbs}
+		</div>
 		<article>
 			{entry}
 		</article>
