--- a/templates/home_template.html
+++ b/templates/home_template.html
@@ -3,18 +3,28 @@
 	<head>
 		<meta charset="utf-8">
 		<title>NarekB</title>
+		<link rel="alternate" type="application/rss+xml" href="/rss" title="Your title">
 		<link rel="stylesheet" href="/css/main.css">
 	</head>
 	<body>
 		<article>
 			<h1 id="welcome">> Welcome </h1>
 			<p class="home-info">
-				I'm Narek. I'm an electrical engineer currently living in San Diego, CA.
+				I'm Narek. I'm an Engineer currently living in San Diego, CA.
 			</p>
 			<p class="home-info">
 				I build projects and post some of them here, along with other things I find interesting.
 			</p>
+			<p class="home-info italic">
+				Note: I am still adding previous projects to this website so many articles are currently incomplete or missing.
+			</p>
+			<p class="home-info">
+				<a href="/narekb/rss">RSS</a>
+			</p>
 			{entry}
 		</article>
+		<p style='text-align: center;'>
+			Website built with <a href="/projects/site-builder/">Static Site Generator</a>. A creatively named Static Site Generator.
+		</p>
 	</body>
 </html>
