--- a/templates/home_template.html
+++ b/templates/home_template.html
@@ -19,7 +19,7 @@
 				Note: I am still adding previous projects to this website so many articles are currently incomplete or missing.
 			</p>
 			<p class="home-info">
-				<a href="/narekb/rss">RSS</a>
+				<a href="/rss">RSS</a>
 			</p>
 			{entry}
 		</article>
