--- a/templates/home_template.html
+++ b/templates/home_template.html
@@ -13,18 +13,19 @@
 				I'm Narek. I'm an Engineer currently living in San Diego, CA.
 			</p>
 			<p class="home-info">
-				I build projects and post some of them here, along with other things I find interesting.
+				I build projects and post some of them here, along with other things I find useful or interesting.
 			</p>
 			<p class="home-info italic">
 				Note: I am still adding previous projects to this website so many articles are currently incomplete or missing.
 			</p>
 			<p class="home-info">
-				<a href="/rss">RSS</a>
+				<a href="/rss.xml">RSS</a>
 			</p>
 			{entry}
 		</article>
-		<p style='text-align: center;'>
-			Website built with <a href="/projects/site-builder/">Static Site Generator</a>. A creatively named Static Site Generator.
+
+		<p class="buildwith">
+			Website built with <a href="/projects/site-builder/">Static&nbspSite&nbspGenerator</a>. A creatively named Static&nbspSite&nbspGenerator.
 		</p>
 	</body>
 </html>
