--- a/templates/home_template.html
+++ b/templates/home_template.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 	<head>
+		<meta name="robots" content="noindex">
 		<meta charset="utf-8">
 		<title>NarekB</title>
 		<link rel="alternate" type="application/rss+xml" href="/rss" title="Your title">
@@ -10,7 +11,7 @@
 		<article>
 			<h1 id="welcome">> Welcome </h1>
 			<p class="home-info">
-				I'm Narek. I'm an Engineer currently living in San Diego, CA.
+				I'm Narek. I'm an engineer currently living in San Diego, CA.
 			</p>
 			<p class="home-info">
 				I build projects and post some of them here, along with other things I find useful or interesting.
@@ -25,7 +26,7 @@
 		</article>
 
 		<p class="buildwith">
-			Website built with <a href="/projects/site-builder/">Static&nbspSite&nbspGenerator</a>. A creatively named Static&nbspSite&nbspGenerator.
+			Website built with <a href="/projects/site_builder/">Static&nbspSite&nbspGenerator</a>. A static website generator I wrote in Python.
 		</p>
 	</body>
 </html>
