--- a/templates/post_entry_template.html
+++ b/templates/post_entry_template.html
@@ -1,16 +1,21 @@
 
 <a href="{link}">
 <div class='post-entry'>
-	<div class="post-entry-header">
-		<div class="post-entry-title">
-			{title}
-		</div>
-		<div class="post-entry-date">
-			{date}
-		</div>
+	<div class="thumbnail">
+		<img src="{thumbnail}" class='thumbnail' alt="">
 	</div>
-	<div class="post-entry-desc">
-		{description}
+	<div class="post-text">
+		<div class="post-entry-header">
+			<div class="post-entry-title">
+				{title}
+			</div>
+			<div class="post-entry-date">
+				{date}
+			</div>
+		</div>
+		<div class="post-entry-desc">
+			{description}
+		</div>
 	</div>
 </div>
 </a>
