--- a/templates/section_page_template.html
+++ b/templates/section_page_template.html
@@ -11,7 +11,14 @@
 			{breadcrumbs}
 		</div>
 		<article>
+			<h1 id="section">{section}</h1>
+			<p class="home-info">
+			</p>
 			{entry}
 		</article>
+
+		<p class="buildwith">
+			Website built with <a href="/projects/site_builder/">Static&nbspSite&nbspGenerator</a>. A static website generator I wrote in Python.
+		</p>
 	</body>
 </html>
