--- a/templates/page_article.html
+++ b/templates/page_article.html
@@ -13,5 +13,9 @@
 		<article>
 			{entry}
 		</article>
+
+		<p class="buildwith">
+			Website built with <a href="/projects/site_builder/">Static&nbspSite&nbspGenerator</a>. A static website generator I wrote in Python.
+		</p>
 	</body>
 </html>
