--- a/templates/entry_small_thumbnail.html
+++ b/templates/entry_small_thumbnail.html
@@ -1,6 +1,6 @@
 
 <a href="{link}">
-<div class='post-entry small_thumbnail-entry'>
+<div class='post-entry'>
 	<div class="small_thumbnail">
 		<img src="{thumbnail}" class='small_thumbnail' alt="">
 	</div>
@@ -9,12 +9,12 @@
 			<div class="small_thumbnail-entry-title">
 				{title}
 			</div>
-			<div class="small_thumbnail-entry-date">
-				{date}
+			<div class="small_thumbnail-entry-desc">
+				{description}
 			</div>
 		</div>
-		<div class="small_thumbnail-entry-desc">
-			{description}
+		<div class="small_thumbnail-entry-date">
+			{date}
 		</div>
 	</div>
 </div>
