--- a/templates/page_article.html
+++ b/templates/page_article.html
@@ -15,7 +15,7 @@
 		</article>
 
 		<p class="buildwith">
-			Website built with <a href="/projects/site_builder/">Static&nbspSite&nbspGenerator</a>. A static website generator I wrote in Python.
+			Built with <a href="/projects/site_builder.html" class="visible_link">Static&nbspSite&nbspGenerator</a>, a tool I wrote in Python.
 		</p>
 	</body>
 </html>
