--- a/templates/container_basic.html
+++ b/templates/container_basic.html
@@ -1,9 +1,6 @@
 
-<h2>
-	<a href="{link}" class="post_section">
-		{header}
-	</a>
-</h2>
+<h2><a href="{link}" class="post_section">{header}</a></h2>
 <div class="post_section">
 	{content}
 </div>
+{show_more}
